helm/grafana/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-main
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: podinfo
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "9898"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-grafana
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 9898
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
